xidlc/tests/snapshots/codegen_snapshot__cpp__struct_def.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
struct_def.cpp
===============
#include"struct_def.h"
===============
struct_def.h
===============
#ifndef STRUCT_DEF_H
#define STRUCT_DEF_H
#include"xidl_xcdr.hpp"
#include<array>
#include<cstddef>
#include<cstdint>
#include<exception>
#include<map>
#include<memory>
#include<string>
#include<vector>

struct A{
};
template < > struct xidl::xcdr::Traits < A > {
    template < typename Codec > static inline xidl::xcdr::BufferResult serialize(xidl::xcdr::Serializer < Codec > &ser, const A&value){
        xidl::xcdr::BufferResult res{
            XcdrFfiError::Ok, 0
        };
        return xidl::xcdr::BufferResult{
            XcdrFfiError::Ok, ser.position()
        };
    }

    template < typename Codec > static inline xidl::xcdr::BufferResult deserialize(xidl::xcdr::Deserializer < Codec > &de, A&value){
        xidl::xcdr::BufferResult res{
            XcdrFfiError::Ok, 0
        };
        return xidl::xcdr::BufferResult{
            XcdrFfiError::Ok, de.position()
        };
    }
};
struct A{
    int32_t a;

};
template < > struct xidl::xcdr::Traits < A > {
    template < typename Codec > static inline xidl::xcdr::BufferResult serialize(xidl::xcdr::Serializer < Codec > &ser, const A&value){
        xidl::xcdr::BufferResult res{
            XcdrFfiError::Ok, 0
        };
        res = ser.write(value.a);
        if(!res.ok()){
            return res;
        }

        return xidl::xcdr::BufferResult{
            XcdrFfiError::Ok, ser.position()
        };
    }

    template < typename Codec > static inline xidl::xcdr::BufferResult deserialize(xidl::xcdr::Deserializer < Codec > &de, A&value){
        xidl::xcdr::BufferResult res{
            XcdrFfiError::Ok, 0
        };
        res = de.read(value.a);
        if(!res.ok()){
            return res;
        }

        return xidl::xcdr::BufferResult{
            XcdrFfiError::Ok, de.position()
        };
    }
};
struct A{
    ::A::b a;

};
template < > struct xidl::xcdr::Traits < A > {
    template < typename Codec > static inline xidl::xcdr::BufferResult serialize(xidl::xcdr::Serializer < Codec > &ser, const A&value){
        xidl::xcdr::BufferResult res{
            XcdrFfiError::Ok, 0
        };
        res = ser.write(value.a);
        if(!res.ok()){
            return res;
        }

        return xidl::xcdr::BufferResult{
            XcdrFfiError::Ok, ser.position()
        };
    }

    template < typename Codec > static inline xidl::xcdr::BufferResult deserialize(xidl::xcdr::Deserializer < Codec > &de, A&value){
        xidl::xcdr::BufferResult res{
            XcdrFfiError::Ok, 0
        };
        res = de.read(value.a);
        if(!res.ok()){
            return res;
        }

        return xidl::xcdr::BufferResult{
            XcdrFfiError::Ok, de.position()
        };
    }
};
struct A:public B{
};
template < > struct xidl::xcdr::Traits < A > {
    template < typename Codec > static inline xidl::xcdr::BufferResult serialize(xidl::xcdr::Serializer < Codec > &ser, const A&value){
        xidl::xcdr::BufferResult res{
            XcdrFfiError::Ok, 0
        };
        return xidl::xcdr::BufferResult{
            XcdrFfiError::Ok, ser.position()
        };
    }

    template < typename Codec > static inline xidl::xcdr::BufferResult deserialize(xidl::xcdr::Deserializer < Codec > &de, A&value){
        xidl::xcdr::BufferResult res{
            XcdrFfiError::Ok, 0
        };
        return xidl::xcdr::BufferResult{
            XcdrFfiError::Ok, de.position()
        };
    }
};
struct _A{
};
template < > struct xidl::xcdr::Traits < _A > {
    template < typename Codec > static inline xidl::xcdr::BufferResult serialize(xidl::xcdr::Serializer < Codec > &ser, const _A&value){
        xidl::xcdr::BufferResult res{
            XcdrFfiError::Ok, 0
        };
        return xidl::xcdr::BufferResult{
            XcdrFfiError::Ok, ser.position()
        };
    }

    template < typename Codec > static inline xidl::xcdr::BufferResult deserialize(xidl::xcdr::Deserializer < Codec > &de, _A&value){
        xidl::xcdr::BufferResult res{
            XcdrFfiError::Ok, 0
        };
        return xidl::xcdr::BufferResult{
            XcdrFfiError::Ok, de.position()
        };
    }
};
struct _Custom{
    Inner var_inner;

};
template < > struct xidl::xcdr::Traits < _Custom > {
    template < typename Codec > static inline xidl::xcdr::BufferResult serialize(xidl::xcdr::Serializer < Codec > &ser, const _Custom&value){
        xidl::xcdr::BufferResult res{
            XcdrFfiError::Ok, 0
        };
        res = ser.write(value.var_inner);
        if(!res.ok()){
            return res;
        }

        return xidl::xcdr::BufferResult{
            XcdrFfiError::Ok, ser.position()
        };
    }

    template < typename Codec > static inline xidl::xcdr::BufferResult deserialize(xidl::xcdr::Deserializer < Codec > &de, _Custom&value){
        xidl::xcdr::BufferResult res{
            XcdrFfiError::Ok, 0
        };
        res = de.read(value.var_inner);
        if(!res.ok()){
            return res;
        }

        return xidl::xcdr::BufferResult{
            XcdrFfiError::Ok, de.position()
        };
    }
};
struct HelloWorld{
    u8 a;
    std::array < u16, 10 > b;
    std::array < std::array < std::string, 20 > , 10 > c;
    std::vector < u8 > c;
    std::string d;
    std::wstring d;
    void * d;

};
template < > struct xidl::xcdr::Traits < HelloWorld > {
    template < typename Codec > static inline xidl::xcdr::BufferResult serialize(xidl::xcdr::Serializer < Codec > &ser, const HelloWorld&value){
        xidl::xcdr::BufferResult res{
            XcdrFfiError::Ok, 0
        };
        res = ser.write(value.a);
        if(!res.ok()){
            return res;
        }

        res = ser.write(value.b);
        if(!res.ok()){
            return res;
        }

        res = ser.write(value.c);
        if(!res.ok()){
            return res;
        }

        res = ser.write(value.c);
        if(!res.ok()){
            return res;
        }

        res = ser.write(value.d);
        if(!res.ok()){
            return res;
        }

        res = ser.write(value.d);
        if(!res.ok()){
            return res;
        }

        res = ser.write(value.d);
        if(!res.ok()){
            return res;
        }

        return xidl::xcdr::BufferResult{
            XcdrFfiError::Ok, ser.position()
        };
    }

    template < typename Codec > static inline xidl::xcdr::BufferResult deserialize(xidl::xcdr::Deserializer < Codec > &de, HelloWorld&value){
        xidl::xcdr::BufferResult res{
            XcdrFfiError::Ok, 0
        };
        res = de.read(value.a);
        if(!res.ok()){
            return res;
        }

        res = de.read(value.b);
        if(!res.ok()){
            return res;
        }

        res = de.read(value.c);
        if(!res.ok()){
            return res;
        }

        res = de.read(value.c);
        if(!res.ok()){
            return res;
        }

        res = de.read(value.d);
        if(!res.ok()){
            return res;
        }

        res = de.read(value.d);
        if(!res.ok()){
            return res;
        }

        res = de.read(value.d);
        if(!res.ok()){
            return res;
        }

        return xidl::xcdr::BufferResult{
            XcdrFfiError::Ok, de.position()
        };
    }
};
#endif
