xidlc/tests/snapshots/codegen_snapshot__cpp__struct_derive.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
struct_derive.cpp
===============
#include"struct_derive.h"
===============
struct_derive.h
===============
#ifndef STRUCT_DERIVE_H
#define STRUCT_DERIVE_H
#include"xidl_xcdr.hpp"
#include<array>
#include<cstddef>
#include<cstdint>
#include<exception>
#include<map>
#include<memory>
#include<string>
#include<vector>

struct A{
};
template < > struct xidl::xcdr::Traits < A > {
    template < typename Codec > static inline xidl::xcdr::BufferResult serialize(xidl::xcdr::Serializer < Codec > &ser, const A&value){
        xidl::xcdr::BufferResult res{
            XcdrFfiError::Ok, 0
        };
        return xidl::xcdr::BufferResult{
            XcdrFfiError::Ok, ser.position()
        };
    }

    template < typename Codec > static inline xidl::xcdr::BufferResult deserialize(xidl::xcdr::Deserializer < Codec > &de, A&value){
        xidl::xcdr::BufferResult res{
            XcdrFfiError::Ok, 0
        };
        return xidl::xcdr::BufferResult{
            XcdrFfiError::Ok, de.position()
        };
    }
};
struct A{
};
template < > struct xidl::xcdr::Traits < A > {
    template < typename Codec > static inline xidl::xcdr::BufferResult serialize(xidl::xcdr::Serializer < Codec > &ser, const A&value){
        xidl::xcdr::BufferResult res{
            XcdrFfiError::Ok, 0
        };
        return xidl::xcdr::BufferResult{
            XcdrFfiError::Ok, ser.position()
        };
    }

    template < typename Codec > static inline xidl::xcdr::BufferResult deserialize(xidl::xcdr::Deserializer < Codec > &de, A&value){
        xidl::xcdr::BufferResult res{
            XcdrFfiError::Ok, 0
        };
        return xidl::xcdr::BufferResult{
            XcdrFfiError::Ok, de.position()
        };
    }
};
#endif
