xidlc/tests/snapshots/codegen_snapshot__cpp__struct_empty.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
struct_empty.cpp
===============
#include"struct_empty.h"
===============
struct_empty.h
===============
#ifndef STRUCT_EMPTY_H
#define STRUCT_EMPTY_H
#include"xidl_xcdr.hpp"
#include<array>
#include<cstddef>
#include<cstdint>
#include<exception>
#include<map>
#include<memory>
#include<string>
#include<vector>

#endif
