xidlc/tests/snapshots/codegen_snapshot__cpp__struct_simple.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
struct_simple.cpp
===============
#include"struct_simple.h"
===============
struct_simple.h
===============
#ifndef STRUCT_SIMPLE_H
#define STRUCT_SIMPLE_H
#include"xidl_xcdr.hpp"
#include<array>
#include<cstddef>
#include<cstdint>
#include<exception>
#include<map>
#include<memory>
#include<string>
#include<vector>

struct A;
#endif
