xidlc/tests/snapshots/codegen_snapshot__cpp__template_module_dcl.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
template_module_dcl.cpp
===============
#include"template_module_dcl.h"
===============
template_module_dcl.h
===============
#ifndef TEMPLATE_MODULE_DCL_H
#define TEMPLATE_MODULE_DCL_H
#include"xidl_xcdr.hpp"
#include<array>
#include<cstddef>
#include<cstdint>
#include<exception>
#include<map>
#include<memory>
#include<string>
#include<vector>

#endif
